<resources>
    <string name="app_name">爱运动</string>
    <string name="action_settings">Settings</string>

    <string name="tab_stadium">场馆</string>
    <string name="tab_coach">教练</string>
    <string name="tab_mine">我</string>

    <string name="title_register">注册</string>
    <string name="title_login">登录</string>
    <string name="hint_login_password">密码</string>
    <string name="hint_login_username">手机号/用户名</string>
    <string name="forget_password">忘记密码</string>
    <string name="other_app_account_login">第三方帐号快速登录</string>

    <string name="index_default_city">大连</string>
    <string name="stadium_fitness_text">健身馆</string>
    <string name="stadium_badminton_text">羽毛球馆</string>
    <string name="stadium_swim_text">游泳馆</string>

    <string name="mine_my_order">我的订单</string>
    <string name="mine_my_collect">我的收藏</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="mine_settings">设置</string>

    <string name="list_select_filter_classify">分类</string>
    <string name="list_select_filter_location">地区</string>
    <string name="list_select_filter_order">排序</string>

    <string name="title_order_list">订单列表</string>
    <string name="cancel_order_text">取消订单</string>
    <string name="pay_order_text">立即支付</string>
    <string name="not_pay_text">未付款</string>
    <string name="already_pay_text">已付款</string>
    <string name="already_cancel_text">已取消</string>

    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
</resources>
