<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/content_background"
              android:orientation="vertical">

    <com.touna.lovesportapp.view.TitleView
        android:id="@+id/tv_common_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="55dp">

        <com.touna.lovesportapp.view.ClearEditText
            android:id="@+id/cedt_login_phone"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/edt_shape_background"
            android:hint="@string/hint_login_username"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:textColor="@color/tab_normal"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp"/>


        <com.touna.lovesportapp.view.ClearEditText
            android:id="@+id/cedt_login_password"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/edt_shape_background"
            android:hint="@string/hint_login_password"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:textColor="@color/tab_normal"
            android:textColorHint="@color/hint_text"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_login_forget_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textColor="@color/tab_normal"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_click_selector"
            android:text="@string/title_login"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/hint_text"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/other_app_account_login"
            android:textColor="@color/tab_normal"
            android:textSize="15sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/hint_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="55dp"
        android:paddingRight="55dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/qq_logo_normal"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/weixin_logo_normal"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/xinlang_logo_normal"/>
    </LinearLayout>

</LinearLayout>