<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="bottom"
              android:background="@color/title_background"
              android:orientation="horizontal"
              android:paddingBottom="3dp"
              android:paddingTop="4dp">

    <!-- stadium -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_stadium_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_stadium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stadium_pressed"/>

            <TextView
                android:id="@+id/tv_stadium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/tab_stadium"
                android:textColor="@color/tab_pressed"/>
        </LinearLayout>
    </LinearLayout>
    <!-- coach -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_coach_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_coach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/coach_normal"/>

            <TextView
                android:id="@+id/tv_coach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/tab_coach"
                android:textColor="@color/tab_normal"/>
        </LinearLayout>
    </LinearLayout>
    <!-- mine -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_mine_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mine_normal"/>

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/tab_mine"
                android:textColor="@color/tab_normal"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>