<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/content_background"
              android:orientation="vertical">

    <com.touna.lovesportapp.view.TitleView
        android:id="@+id/tv_common_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_my_order_not_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_my_order_not_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/not_pay_text"
                android:textColor="@color/tab_pressed"
                android:textSize="15sp"/>

            <View
                android:id="@+id/v_my_order_not_pay_line"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="bottom"
                android:background="@color/tab_pressed"/>
        </LinearLayout>

        <View
            android:layout_width="0.6dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/index_recommend_view"/>

        <LinearLayout
            android:id="@+id/ll_my_order_pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_my_order_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/already_pay_text"
                android:textColor="@color/tab_normal"
                android:textSize="15sp"/>

            <View
                android:id="@+id/v_my_order_pay_line"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/index_recommend_view"/>
        </LinearLayout>

        <View
            android:layout_width="0.6dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/index_recommend_view"/>

        <LinearLayout
            android:id="@+id/ll_my_order_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_my_order_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/already_cancel_text"
                android:textColor="@color/tab_normal"
                android:textSize="15sp"/>

            <View
                android:id="@+id/v_my_order_cancel_line"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/index_recommend_view"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_my_order"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>