<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/content_background"
              android:orientation="vertical">

    <com.touna.lovesportapp.view.TitleView
        android:id="@+id/tv_common_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="135dp"
        android:background="@drawable/index_banner"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_stadium_fitness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/stadium_fitness_text"
                android:textColor="@color/tab_normal"
                android:textSize="15sp"/>

            <View
                android:id="@+id/v_stadium_fitness_line"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="bottom"
                android:background="@color/tab_pressed"/>
        </LinearLayout>

        <View
            android:layout_width="0.6dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/index_recommend_view"/>

        <LinearLayout
            android:id="@+id/ll_stadium_badminton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/stadium_badminton_text"
                android:textColor="@color/tab_normal"
                android:textSize="15sp"/>

            <View
                android:id="@+id/v_stadium_badminton_line"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/index_recommend_view"/>
        </LinearLayout>

        <View
            android:layout_width="0.6dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/index_recommend_view"/>

        <LinearLayout
            android:id="@+id/ll_stadium_swim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/stadium_swim_text"
                android:textColor="@color/tab_normal"
                android:textSize="15sp"/>

            <View
                android:id="@+id/v_stadium_swim_line"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/index_recommend_view"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_recommend_stadium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>