<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="50dp"
              android:background="@color/white"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_select_filter_classify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_select_filter_classify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/list_select_filter_classify"
                android:textColor="@color/tab_normal"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_select_filter_classify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@drawable/select_filter_normal"/>
        </LinearLayout>

        <View
            android:layout_width="0.6dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/index_recommend_view"/>

        <LinearLayout
            android:id="@+id/ll_select_filter_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_select_filter_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/list_select_filter_location"
                android:textColor="@color/tab_normal"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_select_filter_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@drawable/select_filter_normal"/>
        </LinearLayout>

        <View
            android:layout_width="0.6dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/index_recommend_view"/>

        <LinearLayout
            android:id="@+id/ll_select_filter_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_select_filter_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/list_select_filter_order"
                android:textColor="@color/tab_normal"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/iv_select_filter_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@drawable/select_filter_normal"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.6dp"
        android:layout_gravity="center"
        android:background="@color/index_recommend_view"/>
</LinearLayout>